--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_install:
 
 install:
   - conda env create -n test_env --file ci/requirements-$CONDA_ENV.yml
-  - source activate test_env
+  - source activate xargofloat_test
   - conda list
   - pip install --no-deps -e .
 
